Project-4/Terraform/igw.tf
# Create an Internet Gateway to provide internet access for public subnets
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "igw"
  }
}
